# screendiary

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: pages.yml
docs/: docs.html  index.html
docs/css/: docs.css  landing.css  style.css
docs/js/: docs.js
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  activityStore.ts  chatStore.ts  main.tsx  store.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ControlBar.tsx  MonitorSlot.tsx  NavBar.tsx  SearchDropdown.tsx  TextLayer.tsx  TopBar.tsx  Viewport.tsx
frontend/src/components/activity/: AISummaryCard.tsx  ActivityHeader.tsx  ActivityPage.tsx  ActivityTimeline.tsx  CategoryBreakdown.tsx  CategoryColors.ts  DayMetricsBar.tsx  DayTimeline.tsx  SessionList.tsx  TopAppsCard.tsx  TopDomainsCard.tsx  TopTitlesCard.tsx  utils.ts
frontend/src/components/chat/: ChatMessage.tsx  ChatPage.tsx
frontend/src/hooks/: useImagePreloader.ts  useKeyboardShortcuts.ts  useOcrOverlay.ts
src/screendiary/: __init__.py  __main__.py  activity_summarizer.py  config.py  daemon.py  db.py  models.py  search.py  tray.py
src/screendiary/capture/: active_window.py  browser_domain.py  dedup.py  monitor.py  screenshot.py
src/screendiary/processing/: embeddings.py  ocr.py  pipeline.py
src/screendiary/storage/: archiver.py  extractor.py  manager.py
src/screendiary/web/: app.py
systemd/: screendiary-capture.service  screendiary-tray.service  screendiary-web.service  screendiary.target
(+12 files in other folders)
